remake form and cards

--- a/vite-project/src/components/RegistrationForm.css
+++ b/vite-project/src/components/RegistrationForm.css
@@ -1,3 +1,4 @@
+/*
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
 .form-container {
@@ -7,7 +8,7 @@
   
 }
 
-.form-container h2 {
+.form-container1 {
   font-size: 28px; 
   margin-bottom: 20px;
   color: #6a0dad;
@@ -52,3 +53,4 @@
 .form-container button:hover {
   background-color: #4f0873;
 }
+*/
