--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -2,7 +2,7 @@
     display: flex;
 }
 .dark-background {
-    background-color: black; 
+    background-color: 232121; 
     color: white; 
   }
   
